_archive/sabnzbd/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:download
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Downloader
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-download
    gethomepage.dev/name: sabnzbd
    gethomepage.dev/widget.type: sabnzbd
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_SABNZBD_KEY}"
    gethomepage.dev/widget.url: http://sabnzbd.media.svc.cluster.local:8085
    gethomepage.dev/siteMonitor: https://sabnzbd.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: "sabnzbd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8085
  tls:
    - hosts:
        - "sabnzbd.${SECRET_DOMAIN}"
